--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/MyGuitarShop/nbproject/private/
+/MyGuitarShop/build/
+/MyGuitarShop/dist/
+/Prueba/nbproject/private/
+/Prueba/build/
+/Prueba/dist/
+/testApp/nbproject/private/
+/testApp/build/
